--- a/style/mixin.less
+++ b/style/mixin.less
@@ -5,15 +5,15 @@
   flex-direction: @direction;
 }
 
-.border(@color: #000, @line: 1upx, @style: solid) {
+.border(@color: #000, @line: 1rpx, @style: solid) {
   border: @line @style @color;
 }
 
-.border-bottom(@color: #000, @line: 1upx, @style: solid) {
+.border-bottom(@color: #000, @line: 1rpx, @style: solid) {
   border-bottom: @line @style @color;
 }
 
-.img(@size: 200upx, @radius: 0) {
+.img(@size: 200rpx, @radius: 0) {
   width: @size;
   height: @size;
   object-fit: cover;
