--- a/style/var.less
+++ b/style/var.less
@@ -1,7 +1,7 @@
-@f14:28upx;
-@f12:24upx;
-@f16:32upx;
-@f10:20upx;
+@f14:28rpx;
+@f12:24rpx;
+@f16:32rpx;
+@f10:20rpx;
 
 @c3d:#3d3d3d;
 @c9:#999;
@@ -9,8 +9,8 @@
 @cd8:#D8D8D8;
 @cw:#fff;
 
-@r5:10upx;
-@r10:20upx;
-@r20:40upx;
-@r30:60upx;
-@hw24:48upx;
+@r5:10rpx;
+@r10:20rpx;
+@r20:40rpx;
+@r30:60rpx;
+@hw24:48rpx;
